fix multi-club user management

--- a/app/static/css/components/forms.css
+++ b/app/static/css/components/forms.css
@@ -112,6 +112,13 @@
     margin-top: 20px;
 }
 
+label.required::after {
+    content: "*";
+    color: #772432;
+    margin-left: 4px;
+    font-weight: bold;
+}
+
 /* Login page styles */
 .login-container {
     display: flex;
