--- a/app/static/css/components/forms.css
+++ b/app/static/css/components/forms.css
@@ -77,11 +77,13 @@
     width: 100%;
     max-width: 600px;
     border-collapse: collapse;
+    border: 1px solid #999;
 }
 
+.form-table th,
 .form-table td {
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #999;
     vertical-align: middle;
 }
 
