--- a/app/static/css/core/navigation.css
+++ b/app/static/css/core/navigation.css
@@ -237,6 +237,11 @@
     text-align: center;
 }
 
+.menu-divider {
+    border-top: 1px solid #eee;
+    margin: 4px 0;
+}
+
 /* Logout link */
 .logout-container {
     margin-top: auto;
