--- a/app/templates/_contact_modal.html
+++ b/app/templates/_contact_modal.html
@@ -16,7 +16,7 @@
         </div>
       </div>
       <!-- Accordion 1: Basic Information -->
-      <button type="button" class="accordion active">Basic Information</button>
+      <button type="button" id="basicInfoAccordion" class="accordion active">Basic Information</button>
       <div class="panel" style="max-height: 1000px;"> <!-- Expanded by default -->
         <table class="form-table">
             <tr>
