--- a/app/templates/tools.html
+++ b/app/templates/tools.html
@@ -274,6 +274,7 @@
             </div>
     
             {% include '_contact_modal.html' %}
+            {% include '_duplicate_modal.html' %}
             {% else %}
             <p class="text-center mt-5" style="color: #6c757d; font-size: 1.2rem;">Please select a meeting to view or manage roster entries.</p>
             {% endif %}
