--- a/app/templates/agenda.html
+++ b/app/templates/agenda.html
@@ -341,6 +341,7 @@
 
     {% include '_speech_edit_modal.html' %}
     {% include '_contact_modal.html' %}
+    {% include '_duplicate_modal.html' %}
     {% include 'role_modal.html' %}
     {% include '_meeting_details_modal.html' %}
 
