--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -228,6 +228,7 @@
 </div>
 
 {% include '_contact_modal.html' %}
+{% include '_duplicate_modal.html' %}
 <script>
   var MENTOR_CANDIDATES = [
     {% for m in mentor_candidates %}
